--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "nodemon backend/server.js",
     "start": "node backend/server.js",
-    "build": "npm install && npm install --prefix frontend && npm run build --prefix frontend"
+    "build": "npm install && npm install --prefix frontend && npm run build --prefix frontend",
+    "test:selenium": "node selenium-tests/login.test.js"
   },
   "keywords": [],
   "author": "",
@@ -29,6 +30,7 @@
     "react-hot-toast": "^2.5.1",
     "react-router-dom": "^7.1.1",
     "recharts": "^2.15.0",
+    "selenium-webdriver": "^4.27.0",
     "stripe": "^17.5.0",
     "zustand": "^5.0.2"
   },
