--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "npm install && npm install --prefix frontend && npm run build --prefix frontend",
     "test:selenium:login": "node tests/automation/selenium/login.test.js",
     "test:selenium:signup": "node tests/automation/selenium/signup.test.js",
-    "test:selenium:logout": "node tests/automation/selenium/logout.test.js"
+    "test:selenium:logout": "node tests/automation/selenium/logout.test.js",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -32,14 +33,17 @@
     "react-hot-toast": "^2.5.1",
     "react-router-dom": "^7.1.1",
     "recharts": "^2.15.0",
-    "selenium-webdriver": "^4.27.0",
     "stripe": "^17.5.0",
     "zustand": "^5.0.2"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.2.0",
     "autoprefixer": "^10.4.20",
+    "jest": "^29.7.0",
     "nodemon": "^3.1.9",
     "postcss": "^8.4.49",
+    "selenium-webdriver": "^4.27.0",
     "tailwindcss": "^3.4.17"
   }
 }
