--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "autoprefixer": "^10.4.20",
+    "cypress": "^14.0.2",
     "jest": "^29.7.0",
     "nodemon": "^3.1.9",
     "postcss": "^8.4.49",
